--- a/Events/nextextended.html
+++ b/Events/nextextended.html
@@ -304,9 +304,9 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://unsplash.it/250"
+                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5599c74e-7860-4d13-9bdc-ddb7a45438ae.jpeg"
                                       alt="speaker_name"
-                                      width="auto"
+                                      width="250px"
                                       style="border-radius: 50%"
                                     />
                                     <h3>Dharmesh Vaya</h3>
@@ -406,9 +406,9 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://unsplash.it/250"
+                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/6d1446f5-fa75-4065-aa43-881c9e5b9528.jpeg"
                                       alt="speaker_name"
-                                      width="auto"
+                                      width="250px"
                                       style="border-radius: 50%"
                                     />
                                     <h3>Akash Agarwal</h3>
@@ -506,9 +506,9 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://unsplash.it/250"
+                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/11fdd609-ca09-4de9-8a7f-7d76f4a7de96.jpeg"
                                       alt="speaker_name"
-                                      width="auto"
+                                      width="250px"
                                       style="border-radius: 50%"
                                     />
                                     <h3>Rajat Jaiswal</h3>
@@ -603,9 +603,9 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://unsplash.it/250"
+                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a9ba6f44-c037-4d9e-823a-7f2727f6a4bc.jpeg"
                                       alt="speaker_name"
-                                      width="auto"
+                                      width="250px"
                                       style="border-radius: 50%"
                                     />
                                     <h3>Tushar Pal</h3>
