--- a/Events/nextextended.html
+++ b/Events/nextextended.html
@@ -406,12 +406,12 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/6d1446f5-fa75-4065-aa43-881c9e5b9528.jpeg"
+                                      src="https://gcdcindore.dev/img/people/AkashAgrawal.jpg"
                                       alt="speaker_name"
                                       width="250px"
                                       style="border-radius: 50%"
                                     />
-                                    <h3>Akash Agarwal</h3>
+                                    <h3>Akash Agrawal</h3>
                                     <!-- <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
