Old Format Established

--- a/Events/nextextended.html
+++ b/Events/nextextended.html
@@ -250,9 +250,9 @@
                       </tr>
                     </table>
 
-                    <!-- <hr /> -->
+                    <hr />
 
-                    <!-- <table
+                    <table
                       class="eventdescription"
                       cellspacing="0"
                       cellpadding="0"
@@ -267,18 +267,13 @@
                       <tr>
                         <td>
                           <p style="text-align: justify;">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Doloremque architecto fuga reprehenderit
-                            repudiandae quibusdam exercitationem sunt ipsum
-                            pariatur sit debitis autem quam dolore eaque
-                            voluptatem deleniti necessitatibus, rem magni at
-                            facilis, quos impedit. Reprehenderit perspiciatis
-                            error tempora dolore. Cum tempora quasi mollitia quo
-                            tempore fugit ab dolores earum beatae porro?
+                            Google Cloud Developers Community, Indore hosted it's latest event for May 2019: Cloud Next Extended 2019!<br><br>
+At Cloud Next, GCDC Indore reviewed the many cloud technologies introduced at the Google Cloud Next event held in San Francisco, as well as held a variety of sessions on all manner of cloud-related topics.<br><br>
+For more information, contact us @ <a href="mailto:gcdcindore@gmail.com">gcdc.indore@gmail.com</a> or visit : <a href="https://gcdcindore.dev/" target="_blank" rel="noopener noreferrer">https://gcdcindore.dev/</a><br>
                           </p>
                         </td>
                       </tr>
-                    </table> -->
+                    </table>
 
                     <hr />
                     
@@ -310,7 +305,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Dharmesh Vaya</h3>
-                                    <!-- <ul style="list-style:none;">
+                                    <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -343,7 +338,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul> -->
+                                    </ul>
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
@@ -412,7 +407,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Akash Agrawal</h3>
-                                    <!-- <ul style="list-style:none;">
+                                    <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -445,7 +440,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul> -->
+                                    </ul>
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
@@ -512,7 +507,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Rajat Jaiswal</h3>
-                                    <!-- <ul style="list-style:none;">
+                                    <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -545,7 +540,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul> -->
+                                    </ul>
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
@@ -609,7 +604,7 @@
                                       style="border-radius: 50%"
                                     />
                                     <h3>Tushar Pal</h3>
-                                    <!-- <ul style="list-style:none;">
+                                    <ul style="list-style:none;">
                                       <li
                                         style="display: inline; padding: 0 5px;"
                                       >
@@ -642,7 +637,7 @@
                                             width="6%"
                                         /></a>
                                       </li>
-                                    </ul> -->
+                                    </ul>
                                   </div>
                                   <div class="session">
                                     <h3>Key-points</h3>
