--- a/Events/nextextended.html
+++ b/Events/nextextended.html
@@ -139,6 +139,9 @@
         #gcdclink a {
           font-size: 0.85em;
         }
+        .eventpara{
+          text-align: left !important;
+        }
         .image,
         .session {
           display: block !important;
@@ -266,7 +269,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <p style="text-align: justify;">
+                          <p class="eventpara" style="text-align: justify;">
                             <b>Google Cloud Next'19</b> was a 3-day event held
                             at San Francisco where a lot of developers,
                             influencers, customers, engineers, learneds and the
@@ -288,13 +291,7 @@
                             <a href="mailto:gcdcindore@gmail.com"
                               >gcdc.indore@gmail.com</a
                             >
-                            or visit :
-                            <a
-                              href="https://gcdcindore.dev/"
-                              target="_blank"
-                              rel="noopener noreferrer"
-                              >https://gcdcindore.dev/</a
-                            ><br />
+                            <br />
                           </p>
                         </td>
                       </tr>
@@ -617,7 +614,7 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5eb82314-f4e4-43db-9231-f39618f4abfa.jpeg"
+                                      src="https://gcdcindore.dev/img/people/RajatJaiswal.jpg"
                                       alt="speaker_name"
                                       width="250px"
                                       style="border-radius: 50%"
