Events updated in May 2019 Newsletter

--- a/Newsletters/may2019.html
+++ b/Newsletters/may2019.html
@@ -475,48 +475,78 @@
                               <ul class="news-list">
                                 <li>
                                   <a
-                                    href="https://gcdcindore.dev"
+                                    href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
                                     target="_blank"
                                     rel="noopener noreferrer"
-                                    >Catch Google Cloud Next Extended'19 in
-                                    Indore</a
+                                    >Catch Google I/O Extended in Indore
+                                    (TBA)</a
                                   >
                                 </li>
                                 <li>
-                                  Missed
                                   <a
+                                    href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Kotlin Hackathon, Indore(TBA)</a
+                                  >
+                                </li>
+                                <li>
+                                  <a
+                                    href="https://events.withgoogle.com/firebase-roadshow-india/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                  >
+                                    Firebase Road Show</a
+                                  >
+                                </li>
+                                <li>
+                                  <a
+                                    href="https://developer.android.com/dev-summit"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Android Dev Summit</a
+                                  >
+                                </li>
+                                <li>
+                                  <a
+                                    href="https://developer.chrome.com/devsummit/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Chrome Dev Summit</a
+                                  >
+                                </li>
+                                <li>
+                                  <a
+                                    href="https://events.withgoogle.com/webmaster-conference-india-2019/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Web Master Conference</a
+                                  >
+                                </li>
+                                <li>
+                                  <a
+                                    href="https://services.google.com/fb/forms/googlepaylive2019eventinterest/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Google Pay Live</a
+                                  >
+                                </li>
+
+                                <li>
+                                  Missed Google I/O 2019? (<a
                                     href="https://cloud.withgoogle.com/next/sf/sessions?utm_medium=email-d&utm_source=newsletter&utm_team=googledevs&utm_campaign=2019-04-eng&utm_content=featuredbutton&mkt_tok=eyJpIjoiTUdKbVlqRXlNV0kzTWpOaCIsInQiOiJCc0lXeHpuSVlSY2lLOGZrV2dcL0tNZGw3YU9ldHhtWE1nOCtrT0VFTVBFek1zNDJKYWtmaUtSblN4M1BNbkJUTW1pT2FETGhrVHpwcFEwWXc2dVl2TlVwd1lkZ0hQZWZ1VVlubXl6NERneXZMZmNwdmswRmV6VmhkNGFXeGdzZFwvIn0%3D"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                   >
-                                    Google Cloud Next 2019?</a
-                                  >
-                                </li>
-                                <li>
-                                  Don’t forgot to tune into Google I/O 2019 (<a
-                                    href="https://events.google.com/io/"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Watch Live</a
+                                    Watch here</a
                                   >)
                                 </li>
                                 <li>
-                                  Apply to
                                   <a
-                                    href="https://developers.google.com/programs/dsc/"
+                                    href="https://www.analyticsvidhya.com/datahack-summit-2019/"
                                     target="_blank"
                                     rel="noopener noreferrer"
-                                  >
-                                    Developer Student Club</a
-                                  >
-                                  (Deadline May 15)
-                                </li>
-                                <li>
-                                  <a
-                                    href="https://developer.android.com/dev-summit?utm_medium=email-d&utm_source=newsletter&utm_team=googledevs&utm_campaign=2019-04-eng&utm_content=savedate2&mkt_tok=eyJpIjoiTUdKbVlqRXlNV0kzTWpOaCIsInQiOiJCc0lXeHpuSVlSY2lLOGZrV2dcL0tNZGw3YU9ldHhtWE1nOCtrT0VFTVBFek1zNDJKYWtmaUtSblN4M1BNbkJUTW1pT2FETGhrVHpwcFEwWXc2dVl2TlVwd1lkZ0hQZWZ1VVlubXl6NERneXZMZmNwdmswRmV6VmhkNGFXeGdzZFwvIn0%3D"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >Android Dev Summit 2019</a
+                                    >Data Hack Summit 2019</a
                                   >
                                 </li>
                               </ul>
@@ -549,35 +579,35 @@
                                   <img
                                     src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
                                     alt=""
-                                    width="8%"
+                                    width="4%"
                                   />
                                 </li>
                                 <li style="display:inline; ">
                                   <img
                                     src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
                                     alt=""
-                                    width="8%"
+                                    width="4%"
                                   />
                                 </li>
                                 <li style="display:inline; ">
                                   <img
                                     src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
                                     alt=""
-                                    width="8%"
+                                    width="4%"
                                   />
                                 </li>
                                 <li style="display:inline; ">
                                   <img
                                     src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
                                     alt=""
-                                    width="8%"
+                                    width="4%"
                                   />
                                 </li>
                                 <li style="display:inline; ">
                                   <img
                                     src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/d39e15f0-92ec-4c2b-aafa-1569b844f855.png"
                                     alt=""
-                                    width="8%"
+                                    width="4%"
                                   />
                                 </li>
                               </ul>
@@ -590,6 +620,8 @@
                                 <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a685aa5c-7ab5-4c77-b20e-dc7ff66dc464.png"
                                       alt="Meetup"
@@ -597,7 +629,10 @@
                                   /></a>
                                 </li>
                                 <li style="display: inline; padding: 0 5px;">
-                                  <a href="https://gcdcindore.dev"
+                                  <a
+                                    href="https://gcdcindore.dev"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
                                     ><img
                                       src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
                                       alt="GcdcIndore"
@@ -605,7 +640,10 @@
                                   /></a>
                                 </li>
                                 <li style="display: inline; padding: 0 5px;">
-                                  <a href="https://www.facebook.com/gcdcindore/"
+                                  <a
+                                    href="https://www.facebook.com/gcdcindore/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5d598183-0ebe-437a-a45c-b2f68c1d905f.png"
                                       alt="Facebook"
@@ -613,7 +651,10 @@
                                   /></a>
                                 </li>
                                 <li style="display: inline; padding: 0 5px;">
-                                  <a href="https://twitter.com/gcdcIndore"
+                                  <a
+                                    href="https://twitter.com/gcdcIndore"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/20b26c35-b020-4ea2-a756-995d9a188cd2.png"
                                       alt="Twitter"
@@ -623,6 +664,8 @@
                                 <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.instagram.com/gcdcindore/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/4a070e19-87ab-4543-9c5c-3180f5ffe1ca.png"
                                       alt="Instagram"
@@ -632,6 +675,8 @@
                                 <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.linkedin.com/in/google-cloud-developers-community-indore-984651172"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/0f0d2abc-0492-4c5c-9998-4b83ea8fc8fd.png"
                                       alt="Linkedin"
