Meetup link changed

--- a/Newsletters/may2019.html
+++ b/Newsletters/may2019.html
@@ -475,7 +475,7 @@
                               <ul class="news-list">
                                 <li>
                                   <a
-                                    href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
+                                    href="https://www.meetup.com/GDGIndore/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Catch Google I/O Extended in Indore
@@ -484,7 +484,7 @@
                                 </li>
                                 <li>
                                   <a
-                                    href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
+                                    href="https://www.meetup.com/GDGIndore/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Kotlin Hackathon, Indore(TBA)</a
@@ -537,8 +537,7 @@
                                     href="https://cloud.withgoogle.com/next/sf/sessions?utm_medium=email-d&utm_source=newsletter&utm_team=googledevs&utm_campaign=2019-04-eng&utm_content=featuredbutton&mkt_tok=eyJpIjoiTUdKbVlqRXlNV0kzTWpOaCIsInQiOiJCc0lXeHpuSVlSY2lLOGZrV2dcL0tNZGw3YU9ldHhtWE1nOCtrT0VFTVBFek1zNDJKYWtmaUtSblN4M1BNbkJUTW1pT2FETGhrVHpwcFEwWXc2dVl2TlVwd1lkZ0hQZWZ1VVlubXl6NERneXZMZmNwdmswRmV6VmhkNGFXeGdzZFwvIn0%3D"
                                     target="_blank"
                                     rel="noopener noreferrer"
-                                  >
-                                    Watch here</a
+                                  >Watch here</a
                                   >)
                                 </li>
                                 <li>
