--- a/index.html
+++ b/index.html
@@ -176,10 +176,7 @@
             <ul>
               <li><a href="Newsletters/may2019.html">May 2019</a></li>
               <li>
-                <a class="tooltip" href=""
-                  ><span class="tooltiptext">Content Unavailable</span>June
-                  2019</a
-                >
+                <a href="Newsletters/june2019.html">June 2019</a>
               </li>
               <li>
                 <a class="tooltip" href=""
