--- a/Newsletters/june2019.html
+++ b/Newsletters/june2019.html
@@ -217,7 +217,7 @@
                           <a href="https://gcdcindore.dev">
                             <img
                               id="header-logo"
-                              src="../GDG Cloud Indore.png"
+                              src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a5d79f5c-edc8-42a2-9b23-d14c4f84c4f9.png"
                               alt="GCDC Logo"
                               width="100%"
                           /></a>
@@ -249,7 +249,7 @@
                               <img
                                 width="250"
                                 height="250"
-                                src="../Kotlin-logo.png"
+                                src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/39ed5ee9-c309-4d32-ab87-c16329635097.png"
                                 alt="Anthos"
                             /></a>
                           </div>
@@ -274,7 +274,7 @@
                               ><img
                                 width="250"
                                 height="250"
-                                src="../tensorflow.png"
+                                src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a47ae550-6363-49fb-87ba-e8d1eb4922b1.png"
                                 alt="Cloud Code"
                             /></a>
                           </div>
@@ -360,7 +360,7 @@
                                     href="https://medium.com/@deveshshirsath/perks-of-ux-ce43835e1ec4"
                                     target="_blank"
                                     rel="noopener noreferrer"
-                                    >Perks of UX *from the commmunity*</a
+                                    >Perks of UX</a
                                   >
                                 </li>
                                 <li>
@@ -478,7 +478,7 @@
                                   >
                                 </li>
                                 <li>
-                                    Akash Gnagrade, 
+                                    Aakash Gnagrade, 
                                   <a
                                     href="https://www.linkedin.com/feed/update/urn:li:activity:6551335187882577920"
                                     target="_blank"
@@ -486,15 +486,7 @@
                                     >Server Side development with Node JS, Express and MongoDB</a
                                   >
                                 </li>
-                                <li>
-                                    Suyash Dixit, 
-                                  <a
-                                    href="#"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >AWS Certification</a
-                                  >
-                                </li>
+                                
                                 
                               </ul>
                             </div>
@@ -588,7 +580,7 @@
                                 </li>
                                 <li style="display: inline; padding: 0 5px;">
                                   <a
-                                    href="https://www.facebook.com/gcdcindore/"
+                                    href="https://www.facebook.com/gdgcindore/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     ><img
@@ -599,7 +591,7 @@
                                 </li>
                                 <li style="display: inline; padding: 0 5px;">
                                   <a
-                                    href="https://twitter.com/gcdcIndore"
+                                    href="https://twitter.com/gdgcloudindore"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     ><img
@@ -610,7 +602,7 @@
                                 </li>
                                 <li style="display: inline; padding: 0 5px;">
                                   <a
-                                    href="https://www.instagram.com/gcdcindore/"
+                                    href="https://www.instagram.com/gdgcloudindore/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     ><img
@@ -653,7 +645,7 @@
                             <a
                               href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
                               target="_blank"
-                              >GCDC Indore</a
+                              >GDG Cloud Indore</a
                             >
                           </p>
                           <p
