--- a/Events/nextextended.html
+++ b/Events/nextextended.html
@@ -474,7 +474,7 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://gcdcindore.dev/img/people/AkashAgrawal.jpg"
+                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/97528c4f-de1f-45fe-862f-8c666ad71143.jpg"
                                       alt="speaker_name"
                                       width="250px"
                                       style="border-radius: 50%"
@@ -614,7 +614,7 @@
                                 <div class="speaker">
                                   <div class="image" style="text-align:center">
                                     <img
-                                      src="https://gcdcindore.dev/img/people/RajatJaiswal.jpg"
+                                      src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5eb82314-f4e4-43db-9231-f39618f4abfa.jpeg"
                                       alt="speaker_name"
                                       width="250px"
                                       style="border-radius: 50%"
