IO Event Summar updated

--- a/Events/ioextended.html
+++ b/Events/ioextended.html
@@ -292,9 +292,9 @@
                       <tr>
                         <td>
                           <p class="eventpara" style="text-align: justify;">
-                            <b>Google I/O'19</b> 
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus tempora molestias, quas aperiam ullam, quod temporibus architecto id explicabo provident. Fuga iste unde quidem, necessitatibus quos adipisci. Debitis, dicta.
-                            For more information, contact us @
+                            <b>Google IO 2019</b> was a 3-day event held at Mountain View, CA where a lot of developers, influencers, customers, engineers, learneds and the larger global google community came together to unlock new opportunities and get inspired to learn about the latest inventions and trends in google technologies.<br><br>
+<b>Google IO Extended 2019</b> was an event organised by GDG Indore in collaboration with GDG Cloud Indore and WTM Indore where the team reviewed the diverse technologies introduced at the Google IO Extended 2019 event at Mountain View, CA. In the event we had a discussion and hands of practice over Machine Learning, Tensorflow, and Kotlin succeeded by the 18 Hour long Hackathon on Kotlin.
+                            <br><br>For more information, contact us @
                             <a href="mailto:gcdcindore@gmail.com"
                               >gcdc.indore@gmail.com</a
                             >
