--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
                 >
               </li>
               <li>
-                <a class="tooltip" href=""
-                  ><span class="tooltiptext">Content Unavailable</span>June
-                  2019</a
+                <a class="tooltip" href="./Events/ioextended.html"
+                  >IO Extended</a
                 >
               </li>
               <li>
