IO Header and Links Updated

--- a/Events/ioextended.html
+++ b/Events/ioextended.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Next Extended'19</title>
+    <title>IO Extended'19</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500%7C"
@@ -253,7 +253,7 @@
                           <a href="https://gcdcindore.dev">
                             <img
                               id="header-logo"
-                              src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a5d79f5c-edc8-42a2-9b23-d14c4f84c4f9.png"
+                              src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/c5d8ac04-f0ad-4e67-9a91-ceb9d86713d4.jpg"
                               alt="GCDC Logo"
                               width="95%"
                               style="padding: 10px;"
@@ -520,19 +520,19 @@
                               <td>
                                 <div class="implinks">
                                   <a
-                                    href="https://kubernetes.io/docs/home/"
+                                    href="https://kotlinlang.org/"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Link 1</a
                                   >
                                   <a
-                                    href="https://aihub.cloud.google.com/"
+                                    href="https://developer.android.com/kotlin/overview"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Link 2</a
                                   >
                                   <a
-                                    href="https://www.qwiklabs.com/quests/45"
+                                    href="https://blog.jetbrains.com/kotlin"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Link 3</a
