feedback and linkedin update

--- a/Events/ioextended.html
+++ b/Events/ioextended.html
@@ -643,10 +643,10 @@
                               style="display:inline-block; float: left;text-align: justify"
                               id="social"
                             >
-                              Your feedback about the event:
+                              Your feedback about the newsletter:
                             </p>
                             <a
-                              href="https://forms.gle/xM79EQ3CXKztH4xy7"
+                              href="https://forms.gle/6kEykUP8B9868JvA6"
                               target="_blank"
                             >
                               <ul
@@ -752,7 +752,7 @@
                                 </li>
                                 <li style="display: inline; padding: 0 5px;">
                                   <a
-                                    href="https://www.linkedin.com/in/google-cloud-developers-community-indore-984651172"
+                                    href="https://www.linkedin.com/in/gdgcloudindore"
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     ><img
