--- a/index.html
+++ b/index.html
@@ -179,10 +179,7 @@
                 <a href="Newsletters/june2019.html">June 2019</a>
               </li>
               <li>
-                <a class="tooltip" href=""
-                  ><span class="tooltiptext">Content Unavailable</span>July
-                  2019</a
-                >
+                <a href="Newsletters/july2019.html">July 2019</a>
               </li>
               <li>
                 <a class="tooltip" href=""
