--- a/Newsletters/july2019.html
+++ b/Newsletters/july2019.html
@@ -362,7 +362,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Java vs Kotlin</a
-                                  >!
+                                  >
                                 </li>
                                 <li>
                                   <a
@@ -378,7 +378,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Google IO Recap</a
-                                  >!
+                                  >
                                 </li>
                                 <li>
                                   <a
@@ -386,7 +386,7 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >Web Scraping</a
-                                  > with scrapy/
+                                  > with scrapy
                                 </li>
                                 <li>
                                     Using 
