--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                 <a href="Newsletters/july2019.html">July 2019</a>
               </li>
               <li>
-                <a class="tooltip" href=""
-                  ><span class="tooltiptext">Content Unavailable</span>August
+                <a class="tooltip" href="Newsletters/aug2019.html"
+                  >August
                   2019</a
                 >
               </li>
